updated the examples

--- a/example/reactTags.css
+++ b/example/reactTags.css
@@ -59,3 +59,7 @@ div.ReactTags__suggestions ul li.ReactTags__activeSuggestion {
     background: #b7cfe0;
     cursor: pointer;
 }
+
+.tag1 {
+    padding:5px;
+}
